content/manual/v7.0/source/includes/changelogs/releases/7.0.41.rst
.. _7.0.41-changelog:

7.0.41 Changelog
----------------

Replication
~~~~~~~~~~~

- :issue:`SERVER-111885` Index Build Merging Spills conflicts with
  replSetGetStatus
- :issue:`SERVER-122177` Ensure
  _createHorizonTopologyChangePromiseMapping() uses the correct index in
  cases of reconfig to remove a node

Storage
~~~~~~~


WiredTiger
``````````

- :issue:`WT-14034` Fix resolving the prepared key multiple times
  because of reserved updates
- :issue:`WT-14267` test/format assert detects evicting an accessible
  internal page with an active split generation
- :issue:`WT-15088` Commit may be rolled back after we have logged the
  transaction
- :issue:`WT-15830` Add stats to track how many saved update list and
  total number of updates processed in __wti_rec_hs_insert_updates

Operations
~~~~~~~~~~

:issue:`SERVER-112636` Remove superfluous FTDC logging

Build and Packaging
~~~~~~~~~~~~~~~~~~~

:issue:`SERVER-132775` Turn off remote execution and scons caching for
7.0 release variants on patches

Internals
~~~~~~~~~

- :issue:`SERVER-97615` Provide visibility into which ServerStatus
  section threw in FTDC thread
- :issue:`SERVER-104464` Handle missing index idents during replica set
  startup recovery after unclean shutdown
- :issue:`SERVER-106302` Provide visibility if aggregate FTDC object is
  too large
- :issue:`SERVER-106644` Unnecessary error log message in the FTDC
  ServerStatus collector
- :issue:`SERVER-111349` Rewrite RateLimitIsValidAfterQueueing unit test
- :issue:`SERVER-111573` Add configuration to collstats to return full
  wiredtiger data source metrics
- :issue:`SERVER-116263` _participants can be accessed concurrently in
  TransactionCoordinator
- :issue:`SERVER-118419` Write ops with different dbVersions for a given
  db should not be batched together
- :issue:`SERVER-118615` Use generated macos certificates in system CA
  tests
- :issue:`SERVER-120949` Remove Tag Based FCV Generation
- :issue:`SERVER-126298` Backport RHEL 10 to 8.3, 8.0, and 7.0
- :issue:`SERVER-127346` Make session refresh have kExempt admission
  priority
- :issue:`SERVER-127414` Track absolute napTime in DeferredToken
- :issue:`SERVER-127946` Renew all test certs for 7.x, 8.x, and 9.x
- :issue:`SERVER-131073` Query stats key for $searchMeta on mongos fails
  re-parse on $searchMeta.limit
- :issue:`SERVER-131378` Remove references to ubi8 distro from project
  settings to unblock Evergreen deletion
- :issue:`SERVER-131827` v7.0 does not tolerate v3 time-series buckets
  in collection validation

