content/manual/v8.3/source/includes/changelogs/releases/7.0.41.rst
.. _7.0.41-changelog:

7.0.41 Changelog
----------------

Replication
~~~~~~~~~~~

- :issue:`SERVER-111885` Index Build Merging Spills conflicts with
  replSetGetStatus
- :issue:`SERVER-122177` Ensure
  _createHorizonTopologyChangePromiseMapping() uses the correct index in
  cases of reconfig to remove a node

Storage
~~~~~~~


WiredTiger
``````````

- :issue:`WT-14034` Fix resolving the prepared key multiple times
  because of reserved updates
- :issue:`WT-14267` test/format assert detects evicting an accessible
  internal page with an active split generation
- :issue:`WT-15088` Commit may be rolled back after we have logged the
  transaction
- :issue:`WT-15830` Add stats to track how many saved update list and
  total number of updates processed in __wti_rec_hs_insert_updates

Operations
~~~~~~~~~~

:issue:`SERVER-112636` Remove superfluous FTDC logging

Build and Packaging
~~~~~~~~~~~~~~~~~~~

:issue:`SERVER-132775` Turn off remote execution and scons caching for
7.0 release variants on patches

Internals
~~~~~~~~~

- :issue:`SERVER-97615` Provide visibility into which ServerStatus
  section threw in FTDC thread
- :issue:`SERVER-104464` Handle missing index idents during replica set
  startup recovery after unclean shutdown
- :issue:`SERVER-106302` Provide visibility if aggregate FTDC object is
  too large
- :issue:`SERVER-106644` Unnecessary error log message in the FTDC
  ServerStatus collector
- :issue:`SERVER-111349` Rewrite RateLimitIsValidAfterQueueing unit test
- :issue:`SERVER-111573` Add configuration to collstats to return full
  wiredtiger data source metrics
- :issue:`SERVER-116263` _participants can be accessed concurrently in
  TransactionCoordinator
- :issue:`SERVER-118419` Write ops with different dbVersions for a given
  db should not be batched together
- :issue:`SERVER-118615` Use generated macos certificates in system CA
  tests
- :issue:`SERVER-120949` Remove Tag Based FCV Generation
- :issue:`SERVER-126298` Backport RHEL 10 to 8.3, 8.0, and 7.0
- :issue:`SERVER-127346` Make session refresh have kExempt admission
  priority
- :issue:`SERVER-127414` Track absolute napTime in DeferredToken
- :issue:`SERVER-127946` Renew all test certs for 7.x, 8.x, 9.x
- :issue:`SERVER-127985` Reject regex matches that do not lay on UTF-8
  character boundaries
- :issue:`SERVER-128253` Integer overflow in query planner
  explodeForSort() can trigger mongod denial of service
- :issue:`SERVER-130571` Limit use of $_internalIndexKey to internal
  clients only
- :issue:`SERVER-130759` Adjust invariant condition to account for
  arbiter nodes
- :issue:`SERVER-130785` Fix LDAP roles for pooled LDAP connections
- :issue:`SERVER-130901` Limit JSON Pointer path depth to 255 for
  $jsonSchema.encryptMetadata.keyId
- :issue:`SERVER-130926` Usage of strtoll in
  generateJSONSchemaArraySingleSchemaError can throw std::exception
- :issue:`SERVER-131073` Query stats key for $searchMeta on mongos fails
  re-parse on $searchMeta.limit
- :issue:`SERVER-131202` Fix aggregation pipeline updateLookup with
  dollar-prefixed fields
- :issue:`SERVER-131229` enforce case-sensitivity in options validation
- :issue:`SERVER-131326` Repeat stmtIds on writes crash the server
- :issue:`SERVER-131378` Remove references to ubi8 distro from project
  settings to unblock Evergreen deletion
- :issue:`SERVER-131420` Reject WiredTiger configString type overrides
  other than "type=file"
- :issue:`SERVER-131423` Apply consistent redaction in reportState()
- :issue:`SERVER-131562` Heap memory disclosure via mis-indexed
  tie-break vectors in the query multi-planner
- :issue:`SERVER-131827` v7.0 does not tolerate v3 time-series buckets
  in collection validation
- :issue:`SERVER-131860` Improve wiredtiger config string handling
- :issue:`SERVER-131870` Fix heap use-after-free
- :issue:`SERVER-132275` [v8.0] Reject $lookup with multiple pipeline
  arguments
- :issue:`SERVER-132650` Make mongos use the configurable minimum
  timeout for pre-auth streamable hello

